# Certa.dev

./: .gitignore  CMakeLists.txt  CONVENTIONAL_COMMITS.md  main.cpp
assets/: Certadev.db  icons.qrc  resources.qrc
dataAccessLayer/authRepository/: authRepository.cpp  authRepository.h
dataAccessLayer/database/: database.cpp  database.h
dataAccessLayer/movieRepository/: movieRepository.cpp  movieRepository.h
dataAccessLayer/userRepository/: userRepository.cpp  userRepository.h
models/auth/: authResponse.h  authStatus.h
models/movie/: movie.h  movieResponse.h  movieStatus.h
models/user/: user.h  userResponse.h  userStatus.h
presentationLayer/home/: home.cpp  home.h  home.ui
presentationLayer/layout/: layout.cpp  layout.h  layout.ui
presentationLayer/widgets/auth/: auth.cpp  auth.h  auth.ui
presentationLayer/widgets/auth/interestsDialog/: interestsDialog.cpp  interestsDialog.h  interestsDialog.ui
presentationLayer/widgets/common/movieCard/: movieCard.cpp  movieCard.h
presentationLayer/widgets/favorites/: favorites.cpp  favorites.h  favorites.ui
presentationLayer/widgets/home/: home.cpp  home.h  home.ui
presentationLayer/widgets/movies/: movies.cpp  movies.h  movies.ui
presentationLayer/widgets/movies/movie/: movie.cpp  movie.h  movie.ui
presentationLayer/widgets/recommendations/: recommendations.cpp  recommendations.h  recommendations.ui
presentationLayer/widgets/settings/: settings.cpp  settings.h  settings.ui
serviceLayer/authService/: authService.cpp  authService.h
serviceLayer/movieService/: movieService.cpp  movieService.h
serviceLayer/userService/: userService.cpp  userService.h
serviceLayer/userSession/: userSession.cpp  userSession.h
